// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label sync reporter correctly generates report 1`] = `
"This is an autogenerated report for your project.
(dry run: "false")

New Labels:
- test
  Testing sync.

Updated Labels:
No updates.

Removed Labels:
- bug/no-reproduction
- basic
- kind/bug

"
`;

exports[`label sync reporter generates correct empty report 1`] = `
"This is an autogenerated report for your project.
(dry run: "true")

New Labels:
No new labels.

Updated Labels:
No updates.

Removed Labels:
No deadly changes.

We haven't removed any label yet.
If you want us to remove them, set strict to true."
`;
